added validation for User

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -7,3 +7,4 @@ ru:
   comment_success_create: 'Комментарий был успешно создан'
   comment_error_create: 'Не получилось создать комментарий'
   comment_success_destroy: 'Комментарий был успешно удален'
+  bad_login: 'Логин может содержать только буквы, цифры и символ подчеркивания'
